Added data file

--- a/README.html
+++ b/README.html
@@ -171,7 +171,127 @@ pre code {
 </div>
 
 
-<p>Batra, Neale et al. (2021), The Epidemiologist R Handbook. <a href="https://zenodo.org/badge/doi/10.5281/zenodo.4752646.svg" class="uri">https://zenodo.org/badge/doi/10.5281/zenodo.4752646.svg</a></p>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<table>
+<colgroup>
+<col width="50%" />
+<col width="50%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Variable</th>
+<th>Definition</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>PID</td>
+<td>Personal Identification - a unique identifier code assigned to each person that allows case tracking while preserving patient data confidentiality</td>
+</tr>
+<tr class="even">
+<td>reprt_creationdt_FALSE</td>
+<td>Date of entry for case</td>
+</tr>
+<tr class="odd">
+<td>case_dob_FALSE</td>
+<td>Date of birth</td>
+</tr>
+<tr class="even">
+<td>case_age</td>
+<td>Age of person</td>
+</tr>
+<tr class="odd">
+<td>case_gender</td>
+<td>Gender of person</td>
+</tr>
+<tr class="even">
+<td>case_race</td>
+<td>U.S. census bureau social definition of race for person</td>
+</tr>
+<tr class="odd">
+<td>case_eth</td>
+<td>U.S. census bureau social definition of ethnicity for person</td>
+</tr>
+<tr class="even">
+<td>case_zip</td>
+<td>zip code of person’s known address</td>
+</tr>
+<tr class="odd">
+<td>Contact_id</td>
+<td>Symptomatic status of person</td>
+</tr>
+<tr class="even">
+<td>sym_startdt_FALSE</td>
+<td>Date of first symptoms (if known)</td>
+</tr>
+<tr class="odd">
+<td>sym_fever</td>
+<td>Person has/had fever symptoms</td>
+</tr>
+<tr class="even">
+<td>sym_myalgia</td>
+<td>Person has/had myalgia symptoms</td>
+</tr>
+<tr class="odd">
+<td>sym_loststastesmell</td>
+<td>Person has/had a loss of taste or smell</td>
+</tr>
+<tr class="even">
+<td>sym_sorethroat</td>
+<td>Person has/had a sore throat</td>
+</tr>
+<tr class="odd">
+<td>sym_headache</td>
+<td>Person has/had a headache</td>
+</tr>
+<tr class="even">
+<td>sym_resolveddt_FALSE</td>
+<td>Person symptoms now resolved</td>
+</tr>
+<tr class="odd">
+<td>contact_household</td>
+<td>Person has household contacts (someone who stays more than 5 nights per week)</td>
+</tr>
+<tr class="even">
+<td>hospitalized</td>
+<td>Person admitted to hospital</td>
+</tr>
+<tr class="odd">
+<td>hosp_admidt_FALSE</td>
+<td>Date of hospital admission</td>
+</tr>
+<tr class="even">
+<td>hosp_dischdt_FALSE</td>
+<td>Date of hospital discharge</td>
+</tr>
+<tr class="odd">
+<td>died</td>
+<td>Person died Y/N</td>
+</tr>
+<tr class="even">
+<td>died_covid</td>
+<td>Covid on death certificate Y/N</td>
+</tr>
+<tr class="odd">
+<td>died_dt_FALSE</td>
+<td>Date of death</td>
+</tr>
+<tr class="even">
+<td>confirmed_case</td>
+<td>Confirmed case of COVID-19</td>
+</tr>
+<tr class="odd">
+<td>pos_sampledt_FALSE</td>
+<td>Date of positive PCR test</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="acknowledgements" class="section level2">
+<h2>Acknowledgements</h2>
+<p>Data provided by Batra, Neale et al. (2021), The Epidemiologist R Handbook. <a href="https://zenodo.org/badge/doi/10.5281/zenodo.4752646.svg" class="uri">https://zenodo.org/badge/doi/10.5281/zenodo.4752646.svg</a></p>
+</div>
 
 
 
